--- a/Software/web/css/style.css
+++ b/Software/web/css/style.css
@@ -125,7 +125,7 @@ a {
 .sk-spinner-pulse {
     width: 40px;
     height: 40px;
-    background-color: #26253a;
+    background-color: #390000;
     border-radius: 100%;
     -webkit-animation: sk-pulseScaleOut 1s infinite ease-in-out;
     animation: sk-pulseScaleOut 1s infinite ease-in-out; }
@@ -241,7 +241,7 @@ a {
 }
 
 #home .btn {
-    background: #26253a;
+    background: #390000;
     border: none;
     border-radius: 0px;
     color: #999;
@@ -255,7 +255,7 @@ a {
 
 #home .btn:hover {
     background: #ffffff;
-    color: #26253a;
+    color: #390000;
 }
 
 
@@ -277,7 +277,7 @@ a {
 #overview blockquote {
     background: #ffffff;
     box-shadow: 0px 2px 8px 10px rgba(50, 50, 50, 0.04);
-    border-left: 8px solid #26253a;
+    border-left: 8px solid #390000;
     word-spacing: 1px;
     letter-spacing: 1px;
     position: absolute;
@@ -294,7 +294,7 @@ a {
 
 #overview .btn {
     background: transparent;
-    border: 4px solid #26253a;
+    border: 4px solid #390000;
     border-radius: 0px;
     font-size: 22px;
     font-weight: 600;
@@ -306,7 +306,7 @@ a {
 }
 
 #overview .btn:hover {
-    background: #26253a;
+    background: #390000;
     color: #ffffff;
 }
 
@@ -337,7 +337,7 @@ a {
 }
 
 #trainer .trainer-thumb .trainer-overlay {
-    background: #26253a;
+    background: #390000;
     color: #ffffff;
     position: absolute;
     width: 100%;
@@ -408,7 +408,7 @@ a {
 }
 
 #newsletter input[type="submit"] {
-    background: #26253a;
+    background: #390000;
     border: none;
     color: #ffffff;
     font-size: 20px;
@@ -421,7 +421,7 @@ a {
 
 #newsletter input[type="submit"]:hover {
     background: #ffffff;
-    color: #26253a;
+    color: #390000;
 }
 
 
@@ -716,11 +716,11 @@ a {
 }
 
 #price .pricing__item:first-child .pricing__price {
-    background: #26253a;
+    background: #390000;
 }
 
 #price .pricing__item:nth-child(2) .pricing__price {
-    background: #26253a;
+    background: #390000;
 }
 
 #price .pricing__item:hover .pricing__price {
@@ -745,7 +745,7 @@ a {
     opacity: 0;
     color: #fff;
     font-size: 20px;
-    background: #26253a;
+    background: #390000;
     text-transform: uppercase;
     letter-spacing: 3px;
     -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
@@ -783,7 +783,7 @@ a {
 -----------------------------------------*/
 #testimonial {
     background: #ffffff;
-    color: #26253a;
+    color: #390000;
     padding-top: 8rem;
     padding-bottom: 8rem;
 }
@@ -803,7 +803,7 @@ a {
    Footer section              
 -----------------------------------------*/
 footer {
-    background: #26253a;
+    background: #390000;
     color: #ffffff;
     padding-top: 8rem;
     padding-bottom: 8rem;
