--- a/Software/web/resources/css/estilo.css
+++ b/Software/web/resources/css/estilo.css
@@ -73,5 +73,9 @@ a:visited {text-decoration: none}
 a:hover {text-decoration: none}
 a:active {text-decoration: none}
 
+.divisior{
+    width: 100%;
+    height: 10px;
+}
 
 
