--- a/Software/web/resources/css/estilo.css
+++ b/Software/web/resources/css/estilo.css
@@ -40,8 +40,12 @@ html, body {
 }
 
 #user-info{
+/*    border-radius: 15px;
+    padding: 10px;
+    height: 50px;
+    border: 1px solid #505050;*/
     float: right;
-    margin-right: 15px;
+    margin-right: 5px;
     font-family: Segoe UI, Source Sans Pro, Ubuntu, sans-serif;
 }
 
